<resources>
    <string name="app_name">Calcu</string>
    <string name="minus">-</string>
    <string name="hint1">Enter 1st Number</string>
    <string name="hint2">Enter 2nd Number</string>
    <string name="divide">/</string>
    <string name="multiply">*</string>
    <string name="clearr">C</string>
    <string name="calculation">0</string>
    <string name="exit">Exit</string>
    <string name="plus">+</string>
</resources>
